# python-project-49

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
brain_games/: cli.py  engine.py  func.py
brain_games/games/: calc.py  even.py  gcd.py  is_even.py  is_prime.py  prime.py  progression.py  welcome.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
