[project]
authors = [
    {name = 'Kirill Drobin', email = 'meispandaren@gmail.com'},
]
name = "hexlet-code"
version = "0.1.0"
description = "5 games that test your basic math knowledge."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4",
    "black>=26.1.0",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.4",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
